
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct stat_array {int count; scalar_t__* data; } ;
typedef int nvlist_t ;


 int ZPOOL_CONFIG_VDEV_STATS_EX ;
 int free (struct stat_array*) ;
 int memcpy (scalar_t__*,scalar_t__*,unsigned int) ;
 scalar_t__ nvlist_lookup_nvlist (int *,int ,int **) ;
 scalar_t__ nvpair64_to_stat_array (int *,char const*,struct stat_array*) ;
 void* safe_malloc (unsigned int) ;
 int verify (int) ;

__attribute__((used)) static struct stat_array *
calc_and_alloc_stats_ex(const char **names, unsigned int len, nvlist_t *oldnv,
    nvlist_t *newnv)
{
 nvlist_t *oldnvx = ((void*)0), *newnvx;
 struct stat_array *oldnva, *newnva, *calcnva;
 int i, j;
 unsigned int alloc_size = (sizeof (struct stat_array)) * len;


 verify(nvlist_lookup_nvlist(newnv, ZPOOL_CONFIG_VDEV_STATS_EX,
     &newnvx) == 0);
 if (oldnv) {
  verify(nvlist_lookup_nvlist(oldnv, ZPOOL_CONFIG_VDEV_STATS_EX,
      &oldnvx) == 0);
 }

 newnva = safe_malloc(alloc_size);
 oldnva = safe_malloc(alloc_size);
 calcnva = safe_malloc(alloc_size);

 for (j = 0; j < len; j++) {
  verify(nvpair64_to_stat_array(newnvx, names[j],
      &newnva[j]) == 0);
  calcnva[j].count = newnva[j].count;
  alloc_size = calcnva[j].count * sizeof (calcnva[j].data[0]);
  calcnva[j].data = safe_malloc(alloc_size);
  memcpy(calcnva[j].data, newnva[j].data, alloc_size);

  if (oldnvx) {
   verify(nvpair64_to_stat_array(oldnvx, names[j],
       &oldnva[j]) == 0);
   for (i = 0; i < oldnva[j].count; i++)
    calcnva[j].data[i] -= oldnva[j].data[i];
  }
 }
 free(newnva);
 free(oldnva);
 return (calcnva);
}
